# CIEL-Desktop

./: AGENT.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CANONICAL_NATIVE_GUI.md  CIEL_V1_NATIVE_DESKTOP_INTEGRATION.md  GLOBAL_CONTEXT_INTRO.md  INDEX.md  LOCAL_INDEX.md  MERGE_READINESS.md  NATIVE_GUI_RUNBOOK.md  PR2_DESCRIPTION.md  PR2_TEST_CHECKLIST.md  PREFERRED_ENTRYPOINTS.md  REVIEWER_START_HERE.md  RUNTIME_EVIDENCE_PIPELINE.md
docs/specs/: CIEL0_KNOWLEDGE_COHERENCE_PROTOCOL_v0_1.md  INDEX.md
scripts/: run_ciel_desktop.py  run_ciel_launcher_hub.py  run_ciel_native_gui.py  run_ciel_native_gui_canonical.py  run_ciel_native_gui_v2.py  run_runtime_evidence_probe.py
src/ciel_desktop/: __init__.py  config.py  launcher_hub.py  main.py  native_gui_canonical.py  native_gui_shell.py  native_gui_shell_v2.py  runtime_evidence_probe.py
src/ciel_desktop/core/: operator_actions.py  sot_adapter.py
tests/: test_desktop_entrypoints.py  test_sot_adapter_panel_state.py
